refactor: 替换 Java 9+ 已废弃的 new Integer(...) 构造
NodeAdapter / ServiceController 中两处 new Integer(...) 调用在
Java 9 起被标记为 @Deprecated(forRemoval=true)，编译时会产生
deprecation 警告。改用 Integer.valueOf(...) 消除告警，行为不变。

- NodeAdapter.java:46
- ServiceController.java:63