@@ -60,7 +60,7 @@ public class ServiceController extends ApiController {
             } else {
                 List<Service> result = new ArrayList<>();
                 result.add(route);
-                return PageResult.succeed(result, new Integer(1));
+                return PageResult.succeed(result, Integer.valueOf(1));
             }
         } catch (ApisixSDKException e) {
             logger.error(e.getMessage(), e);
